--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,7 +33,9 @@ android {
     if (!project.hasProperty("namespace")) {
         namespace 'co.quis.flutter_contacts'
     }
-
+    kotlin {
+        jvmToolchain(17)
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
